# Copyright (C) 2005,2006,2007 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	2765_auctionHouse.sql \
	2765_mail.sql \
	2778_command.sql \
	2787_item_instance.sql \
	2798_command.sql \
	2803_command.sql \
	2808_command.sql \
	2812_character_pet.sql \
	2812_pet_name_generation.sql \
	2815_character_pet.sql \
	2821_raidgroups.sql \
	2828_character.sql \
	2838_corpse_grid.sql \
	2838_creature_grid.sql \
	2838_gameobject_grid.sql \
	2842_character_pet.sql \
	2843_character_pet.sql \
	2850_command.sql \
	2869_command.sql \
	2875_npc_trainer.sql \
	2875_spell_chain.sql \
	2881_spell_chain.sql \
	2885_character.sql \
	2912_areatrigger_template.sql \
	2916_character.sql \
	2938_spell_scripts.sql \
	2940_playercreateinfo_skill.sql \
	2958_command.sql \
	2958_scripts.sql \
	2958_spell_scripts.sql \
	2982_command.sql \
	2993_command.sql \
	3005.sql \
	3010_item_template.sql \
	3017_auctionhouse.sql \
	3020_command.sql \
	3032_creature.sql \
	3044_gameobject_template.sql \
	3054_command.sql \
	3059_pet_levelstats.sql \
	3068_command.sql \
	3075_creature.sql \
	3075_gameobject.sql \
	3090_command.sql \
	3090_creature_template.sql \
	3090_loot_template.sql \
	3091_spell_proc_event.sql \
	3092_quest_template.sql \
	3096_spell_proc_event.sql \
	3106_command.sql \
	3107_playercreateinfo_skill.sql \
	3108_quest_template.sql \
	3110_quest_template.sql \
	3115_quest_template.sql \
	3138_character_inventory.sql \
	3138_disenchaning_loot_template.sql \
	3138_item_template.sql \
	3141_spell_threat.sql \
	3144_command.sql \
	3150_command.sql \
	3162_character_queststatus.sql \
	3162_command.sql \
	3162_quest_template.sql \
	3174_command.sql \
	3179_quest_template.sql \
	3180_spell_proc_event.sql \
	3183_command.sql \
	3186_command.sql \
	3202_character_gifts.sql \
	3205_character_inventory.sql \
	3231_quest_template.sql \
	3245_item_text.sql \
	3245_mail.sql \
	3245_page_text.sql \
	3246_character_reputation.sql \
	3251_commands.sql \
	3252.sql \
	3296_commands.sql \
	3296_playercreateinfo_skill.sql \
	3296_spell_learn_skill.sql \
	3310_spell_learn_spell.sql \
	3316_playercreateinfo_reputation.sql \
	3323.sql \
	3344_playercreateinfo_spell.sql \
	3346_command.sql \
	3348_playercreateinfo_spell.sql \
	3350_command.sql \
	3351_character_pet.sql \
	3397_creature_template.sql \
	3400.sql \
	3402_creature_onkill_reputation.sql \
	3410_group.sql \
	3424_command.sql \
	001_3463_mangos.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	2765_auctionHouse.sql \
	2765_mail.sql \
	2778_command.sql \
	2787_item_instance.sql \
	2798_command.sql \
	2803_command.sql \
	2808_command.sql \
	2812_character_pet.sql \
	2812_pet_name_generation.sql \
	2815_character_pet.sql \
	2821_raidgroups.sql \
	2828_character.sql \
	2838_corpse_grid.sql \
	2838_creature_grid.sql \
	2838_gameobject_grid.sql \
	2842_character_pet.sql \
	2843_character_pet.sql \
	2850_command.sql \
	2869_command.sql \
	2875_npc_trainer.sql \
	2875_spell_chain.sql \
	2881_spell_chain.sql \
	2885_character.sql \
	2912_areatrigger_template.sql \
	2916_character.sql \
	2938_spell_scripts.sql \
	2940_playercreateinfo_skill.sql \
	2958_command.sql \
	2958_scripts.sql \
	2958_spell_scripts.sql \
	2982_command.sql \
	2993_command.sql \
	3005.sql \
	3010_item_template.sql \
	3017_auctionhouse.sql \
	3020_command.sql \
	3032_creature.sql \
	3044_gameobject_template.sql \
	3054_command.sql \
	3059_pet_levelstats.sql \
	3068_command.sql \
	3075_creature.sql \
	3075_gameobject.sql \
	3090_command.sql \
	3090_creature_template.sql \
	3090_loot_template.sql \
	3091_spell_proc_event.sql \
	3092_quest_template.sql \
	3096_spell_proc_event.sql \
	3106_command.sql \
	3107_playercreateinfo_skill.sql \
	3108_quest_template.sql \
	3110_quest_template.sql \
	3115_quest_template.sql \
	3138_character_inventory.sql \
	3138_disenchaning_loot_template.sql \
	3138_item_template.sql \
	3141_spell_threat.sql \
	3144_command.sql \
	3150_command.sql \
	3162_character_queststatus.sql \
	3162_command.sql \
	3162_quest_template.sql \
	3174_command.sql \
	3179_quest_template.sql \
	3180_spell_proc_event.sql \
	3183_command.sql \
	3186_command.sql \
	3202_character_gifts.sql \
	3205_character_inventory.sql \
	3231_quest_template.sql \
	3245_item_text.sql \
	3245_mail.sql \
	3245_page_text.sql \
	3246_character_reputation.sql \
	3251_commands.sql \
	3252.sql \
	3296_commands.sql \
	3296_playercreateinfo_skill.sql \
	3296_spell_learn_skill.sql \
	3310_spell_learn_spell.sql \
	3316_playercreateinfo_reputation.sql \
	3323.sql \
	3344_playercreateinfo_spell.sql \
	3346_command.sql \
	3348_playercreateinfo_spell.sql \
	3350_command.sql \
	3351_character_pet.sql \
	3397_creature_template.sql \
	3400.sql \
	3402_creature_onkill_reputation.sql \
	3410_group.sql \
	3424_command.sql \
	001_3463_mangos.sql \
	README
